--- a/bahmni-lite/.env
+++ b/bahmni-lite/.env
@@ -54,7 +54,7 @@ DOCUMENT_MAX_SIZE_MB=7
 # Crater Environment Variables
 CRATER_PHP_IMAGE_TAG=1.0.0
 CRATER_NGINX_IMAGE_TAG=1.0.0
-CRATER_APP_URL=https://localhost:444
+CRATER_APP_URL=https://13.233.16.33:444
 CRATER_DB_HOST=craterdb
 CRATER_DB_PORT=3306
 CRATER_DB_DATABASE=crater
