--- a/bahmni-lite/.env
+++ b/bahmni-lite/.env
@@ -61,7 +61,7 @@ CRATER_DB_DATABASE=crater
 CRATER_DB_USERNAME=crater
 CRATER_DB_PASSWORD="crater"
 CRATER_SANCTUM_STATEFUL_DOMAINS=13.233.16.33:444
-CRATER_SESSION_DOMAIN=localhost
+CRATER_SESSION_DOMAIN=13.233.16.33
 CRATER_AUTO_INSTALL="true"
 CRATER_ADMIN_NAME="Super Man"
 CRATER_ADMIN_EMAIL=superman@bahmni.org
